--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | AR test</title>
+    <title>Unity WebGL Player | Planetanya Game</title>
     <meta name="description" content="">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
@@ -25,19 +25,19 @@
         <button id="entervr" value="Enter VR" disabled>VR</button>
         <button id="enterar" value="Enter AR" disabled>AR</button>
         <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">AR test</div>
+        <div id="unity-build-title">Planetanya Game</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ARocket.loader.js";
+      var loaderUrl = buildUrl + "/publish.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ARocket.data",
-        frameworkUrl: buildUrl + "/ARocket.framework.js",
-        codeUrl: buildUrl + "/ARocket.wasm",
+        dataUrl: buildUrl + "/publish.data",
+        frameworkUrl: buildUrl + "/publish.framework.js",
+        codeUrl: buildUrl + "/publish.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "AR test",
+        companyName: "Ella and Noa - HIT",
+        productName: "Planetanya Game",
         productVersion: "0.1",
       };
 
