--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <div id="unity-container">
@@ -21,10 +22,10 @@
         </div>
       </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <button id="enterar" value="Enter AR" disabled>מסך מלא</button>
-        <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">Planetanya Game</div>
+        <div id="unity-webgl-logo" style="display:none"></div>
+        <button id="enterar" value="Enter AR" style="display:none" disabled>מסך מלא</button>
+        <div id="unity-webxr-link" style="display:none">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
+        <div id="unity-build-title" style="display:none">Planetanya Game</div>
       </div>
     </div>
     <script>
