--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="jScripts/JavaScript.js" type="text/javascript"></script>
+
   </head>
   <body>
+            <div id="pregame">
+                <section id="guide" class="">
+                    <h2>מדריכ/ה יקר/ה!</h2>
+                    <p>הקלידו כאן את קוד המדריכים הייחודי לכם:</p>
+                    <input id="guidecode" type="number" placeholder="קוד מספרי בלבד" > <br/>
+                    <input id="btn" type="button" value="אישור" onclick="getguidecode()">
+                </section>
+                <section id="group" class="hide">
+                    <h2>שלום קבוצה!</h2>
+                    <p>הקלידו כאן את שם הקבוצה שלכם:</p>
+                    <input id="groupname" type="text" placeholder="שם קבוצה"> <br/>
+                    <input id="btn" type="button" value="הפעילו את המשחק" onclick="getgroupname()">
+                </section>
+            </div>
+
     <div id="unity-container">
       <div id="unity-canvas-container" style="width: 100%; height: 100%;">
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
